0.02
 - Add SEE ALSO section to doc.

0.01 2024-05-27T20:21:38+02:00
 - First version.